Fri Aug  7 16:03:10 UTC 2009  Steven Stallion  <stallions@ociweb.com>


        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/GuidBuilder.h:
        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/RakeResults_T.cpp:
        * dds/DCPS/ReceivedDataStrategy.h:
        * dds/DCPS/ReceivedDataStrategy.cpp:
        * dds/DCPS/SubscriptionInstance.h:

          Added SOURCE_TIMESTAMP support for DESTINATION_ORDER.

        * tests/DCPS/DestinationOrder:
        * tests/DCPS/DestinationOrder/DestinationOrder.mpc:
        * tests/DCPS/DestinationOrder/main.cpp:
        * tests/DCPS/DestinationOrder/run_test.pl:
        * tests/DCPS/DestinationOrder/tcp.conf:

          Added new test for DESTINATION_ORDER implementation.
        
        * bin/dcps_tests.lst:

          Added nightly tests for SOURCE_TIMESTAMP and RECEPTION_TIMESTAMP
          DESTINATION_ORDER.

Thu Aug  6 20:32:51 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * docs/design/presentation.txt:

          Added discussion about implementing the minimum profile portion
          of the PRESENTATION Qos policy.  Included all relevant
          specification sections and verbiage.

Wed Aug  5 17:15:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:

          Implemented Publisher::wait_for_acknowledgments.

        * bin/dcps_tests.lst:

          Added WaitForAck publisher test to nightly builds.

        * tests/DCPS/WaitForAck/Options.h:
        * tests/DCPS/WaitForAck/Options.inl:
        * tests/DCPS/WaitForAck/Options.cpp:
        * tests/DCPS/WaitForAck/Publisher.h:
        * tests/DCPS/WaitForAck/Publisher.cpp:
        * tests/DCPS/WaitForAck/run_test.pl:

          Updated WaitForAck test to cover publisher implementation.
